# gvnsga-prototype

./: CMakeLists.txt  README.md  data
autoencoder-test/: autoencoder-tensorflow-deeptest.py  autoencoder.py
cmake/modules/: ExternalDependencies.cmake  ExternalDependencies.cmake~  FindDLIB.cmake  FindEigen3.cmake  FindGeantV.cmake  FindHepMC.cmake  FindHwloc.cmake  FindLibcmaes.cmake  FindMLPACK.cmake  FindPERF.cmake  FindPerf.cmake  FindPerfMon.h  FindROOT.cmake  FindSLURM.cmake  FindShark.cmake  FindVc.cmake  FindVecGeom.cmake  Finddlib.cmake
example/: CMakeLists.txt  PopulationCMSTest.cxx  PopulationTree.cxx  PopulationTreeDTLZ1.cxx  PopulationTreeDTLZ2.cxx  PopulationTreeDTLZ3.cxx  PopulationTreeDTLZ4.cxx  PopulationTreeDTLZ5.cxx  PopulationTreeDTLZ6.cxx  PopulationTreeDTLZ7.cxx  PopulationTreeRun.cxx  PopulationTreeRunCMAES.cxx  PopulationTreeRunCMS.cxx  PopulationTreeRunCMSLoop.cxx  PopulationTreeRunLoop.cxx  PopulationTreeRunNSGA2.cxx
libga/: CMakeLists.txt
libga/inc/: #TGenes.h#  AlgorithmNSGA.h  AlgorithmNSGA3.h  ExceptionMessenger.h  Functions.h  GAGoogleTest.h  GeantVFitness.h  Genes.h  HistogramManager.h  LinkDef.h  MOEAD.h  MPIClient.h  MPIEvaluate.h  MPIServer.h  PCA.h  PFMWatch.h  Population.h  ReferencePoint.h  TGenes.h  invoke_cpp11.hpp  type_traits.hpp
libga/inc/addstructures/: GACD.h  GACD.h~  GAComparator.h  GAGenericIndicator.h  GANDRank.h
libga/inc/algorithms/: AlgorithmNSGA.h  AlgorithmNSGA.h_backup  AlgorithmNSGA3.h  CMAES.h  GAMOEAD.h  GANSGA2.h  GANSGA2.h~  GANSGA2Mod.h  GANSGA2RPCA.h  GANSGA2UPCA.h  GANSGA2UPCA.h~  GANSGA2UPCAMethod1.h  GANSGA2UPCAMethod23.h  GANSGA2UPCAMethod4.h  GANSGA2UPCATOUT.h  GANSGA3.h  MOEAD.h  MOEADWeights.h  NSGA.h  NSGA3.h  SharkCMAES.h
libga/inc/gacounters/: GACD.h  GAComparator.h  GACounter.h  GANDRank.h
libga/inc/gaoperators/: Crossover.h  GACrossover.h  GAMutation.h  GANoiseReduction.h  GAPolMutation.h  GAPolynomialMutation.h  GASBXCrossover.h  GASelection.h  GASimpleMutation.h  GASimpleSelection.h  GATournamentSelection.h  Mutation.h  NoiseReduction.h  PCAinvPCA.h  PolynomialMutation.h  RandomSelection.h  SBXCrossover.h  Selection.h  SimpleMutation.h  TournamentSelection.h
libga/inc/generic/: Algorithm.h  ConstrainedGaValue.h  ExceptionMessenger.h  Functions.h  FunctionsProxy.h  GAAlgorithm.h  GAConstrainedValue.h  GADouble.h  GADouble.h~  GAValue.h  GAVector.h  GaValue.h  GaVector.h  PF.h  Population.h  Population.h_backup  Population.h~  Problem.h  RandomDouble.h  ReferencePoint.h  TGenes.h  TGenes.h_copy  TGenes.h~  TWeight.h
libga/inc/hpc/: GAEvaluate.h  GAMPIEvaluator.h  GASequentualEvaluator.h  GASimpleEvaluator.h  MPIClient.h  MPIEvaluate.h  MPIEvaluateClient.h  MPIEvaluateServer.h  MPIOrganization.h  MPIServer.h  SequentualEvaluator.h
libga/inc/instrument/: GeantVFitness.h
libga/inc/instrumentation/: CPUManager.h  GeantVFitness.h
libga/inc/mva/: .UncenteredTrickSVD.h.swp  KPCA.h  LPCA.h  LPCAWhite.h  PCA.h  PCAROSL.h_notfinished  PCPPCA.h  PCPPCA.h_notfinished  RobustPCA.h  RobustTrickPCA.h  SVDRepresentation.h  SpectralClustering.h  UncenteredLPCA.h  UncenteredTrickLPCA.h  UncenteredTrickLPCA.h~  UncenteredTrickSVD.h  UncenteredWhiteLPCA.h
libga/inc/output/: CSVManager.h  CSVManager.h~  HistogramManager.h  HistogramManager.h~  csv.h
libga/inc/problem/: BinhConstrained.h  CMSGeantV.h  CMSGeantVOld.h  CMSGeantVOld.h~  Cigtab01.h  DTLZ1.h  DTLZ1.h~  DTLZ2.h  DTLZ2.h~  DTLZ3.h  DTLZ3.h~  DTLZ4.h  DTLZ4.h~  DTLZ5.h  DTLZ6.h  DTLZ6.h~  DTLZ7.h  FastSimGeantV.h  Fonseca.h  Fonteca.h  Kursawe.h  ProblemDTLZ1.h  ProblemMock.h  RunGeantV.h  RunGeantV.h~  RunGeantVOld.h~  Shwefel.h  UFC9.h
libga/inc/problem/COCO/: F48.h
libga/inc/tools/: GASort.h  Generator.h  Random.cxx  Random.h  Sort.h
libga/src/: AlgorithmNSGA.cxx  Functions.cxx  GeantVFitness.cxx  Genes.cxx  Genes.cxx_old  HistogramManager.cxx  MPIServer.cxx  PCA.cxx  PFMWatch.cxx  Population.cxx  Process.cpp  ReferencePoint.cxx  TGenes.cxx  stats.c
libga/src/algorithms/: AlgorithmNSGA.cxx  AlgorithmNSGA.cxx_backup  MOEADWeights.cxx
libga/src/generic/: Functions.cxx  GAWeights.cxx  Population.cxx  ReferencePoint.cxx  TGenes.cxx  TGenes.cxx_backup
libga/src/instrument/: GeantVFitness.cxx
libga/src/instrumentation/: GeantVFitness.cxx
libga/src/mva/: KPCA.cxx  LPCA.cxx  PCA.cxx
libga/src/output/: HistogramManager.cxx
libga/src/tools/: Generator.cxx  Random.cxx  Sort.cxx
libinstrument/: CMakeLists.txt
libinstrument/inc/: CPUManager.h  LinkDef.h  Memory.h  PAPIWatch.h  PFMWatch.h  Papi.h
libinstrument/src/: PAPIWatch.cxx  PFMWatch.cxx
r-plot-data/: dtlz1nsgaeigenvalue.csv  lpca.r  orig3d.r  original.csv  trancformedlcpa.csv  transformed.r  transformedlcpa.csv  transformedulpca.csv
scripts/: slurm.sh
tests/: CMakeLists.txt  CTestsConfig.cmake  csvtest.cxx  main_gtest.cxx
tests/algorithms/: CMSGeantV.cxx  FastSimGeantV.cxx  GeantV.cxx  GeantV.cxx~  GeantVCMS.cxx  LHCBGeantV.cxx  Moead.cxx  Nsga2.cxx  Nsga2.cxx_backup  Nsga2.cxx~  Nsga2ModRPCA.cxx  Nsga2mod.cxx  Nsga2upca.cxx  Nsga2upca.cxx~  Nsga3.cxx  Pareto.cxx  SBXCrossover.cxx
tests/histo/: histo.cxx
tests/inc/: GATest.h
tests/individual/: Individual.cxx
tests/instrument/: Instrument.cxx
tests/mva/: allpca.cxx  allpca.cxx~  bigdata  clustering.cxx  data  data-scaled
